<resources>
    <string name="app_name">Truck Delivery</string>
    <string name="action_back">Back</string>
    <string name="livraisons">Delivery</string>
    <string name="nom">Name</string>
    <string name="n_camion">Num Truck</string>
    <string name="plaque">Numberplate</string>
    <string name="pr_nom">Firstname</string>
    <string name="sauvegarder">Save</string>
    <string name="t_l_phone">Phone</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="to_do">TO-DO</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dictum mi nec pulvinar lobortis. Suspendisse maximus in elit in tincidunt. Donec et augue eu eros sodales porttitor ac a ligula. Fusce maximus a ante sed malesuada. Ut hendrerit luctus semper. Praesent eget odio nisl. Maecenas eu ipsum sed orci molestie cursus eu eros. Aenean lacus justo, gravida ac tristique luctus, aliquam at est. Duis gravida tortor sit amet lectus vehicula ullamcorper. Proin molestie lectus vel ante posuere pretium quis eget justo. Morbi et felis id mauris vulputate malesuada.</string>
    <string name="livr">Delivered</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_newPass">Enter a new Password</string>
    <string name="search">Search</string>
    <string name="npa">Post Code</string>
    <string name="adresse">Adress</string>
    <string name="localit">Locality</string>
    <string name="soci_t">Society</string>
    <string name="chauffeur">Driver</string>
    <string name="choisir_une_date">Choisir une date</string>
    <string name="client">Client</string>
    <string name="conditionnement">Conditioning</string>
    <string name="marchandise">Article</string>
    <string name="num_ro_de_course">Num Delivery</string>
    <string name="quantit">Quantity</string>
    <string name="add_a_driver">Add a Driver</string>
    <string name="langue">Language</string>
    <string name="frFlag">Français</string>
    <string name="enFlag">English</string>
    <string name="ibdriver">ImageButton to access to drivers</string>
    <string name="ibdelivery">ImageButton to access to deliveries</string>
    <string name="ibcustomer">ImageButton to access to customers</string>
    <string name="search_driver" />
    <string name="search_delivery">string/search_delivery</string>
    <string name="Driver" />
    <string name="driver_page" />
    <string name="dr_delivery" />
    <string name="DriverAdd" />
    <string name="admin_page" />
    <string name="app_label" />
    <string name="search_hint" />
    <string name="Results">Results</string>
    <string name="delete">Delete</string>
    <string name="DeliveryAdd" />
    <string name="CustomerAdd" />
    <string-array name="Delivery">
        <item>Delivery A</item>
        <item>Delivery B</item>
        <item>Delivery C</item>
        <item>Delivery D</item>
        <item>Delivery E</item>
        <item>Delivery F</item>
        <item>Delivery G</item>
        <item>Delivery H</item>
    </string-array>
    <string-array name="Customer">
        <item>Customer A</item>
        <item>Customer B</item>
        <item>Customer C</item>
        <item>Customer D</item>
        <item>Customer E</item>
        <item>Customer F</item>
        <item>Customer G</item>
        <item>Customer H</item>
    </string-array>
    <string-array name="Driver">
        <item>Driver A</item>
        <item>Driver B</item>
        <item>Driver C</item>
        <item>Driver D</item>
        <item>Driver E</item>
        <item>Driver F</item>
        <item>Driver G</item>
        <item>Driver H</item>
    </string-array>
</resources>
