<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_delivery_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.marc.truckdelivery.DeliveryAdd">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/client"
        android:id="@+id/spinnerClient_add"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerClient_add"
        android:text="@string/chauffeur"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/spinnerChauffeur_add"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/buttonDate_add"
        android:hint="@string/choisir_une_date"
        android:layout_below="@+id/editTextdeNumCourse_add"
        android:layout_centerHorizontal="true"
        android:onClick="showDatePickerDialog"
        android:text="@string/choisir_une_date"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextdeQte_add"
        android:layout_below="@id/buttonDate_add"
        android:layout_alignStart="@+id/editTextdeNumCourse_add"
        android:layout_marginTop="11dp"
        tools:text="@string/quantit"
        tools:ignore="LabelFor"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextdeQte_add"
        android:layout_alignEnd="@+id/editTextdeQte_add"
        android:layout_marginTop="11dp"
        android:id="@+id/editTextdeCondi_add"
        tools:text="@string/conditionnement"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextdeCondi_add"
        android:layout_alignStart="@+id/editTextdeCondi_add"
        android:layout_marginTop="11dp"
        android:id="@+id/editTextdeMar_add"
        tools:text="@string/marchandise"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSave_add"
        tools:text="@string/sauvegarder"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextdeNumCourse_add"
        android:layout_marginTop="12dp"
        tools:text="@string/num_ro_de_course"
        tools:ignore="LabelFor"
        android:layout_below="@+id/spinnerChauffeur_add"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
