<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marc.truckdelivery.admin_page">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_buttonDelivery"
        android:layout_below="@+id/admin_buttonDriver"
        android:layout_alignStart="@+id/admin_buttonDriver"
        android:layout_marginTop="47dp"
        android:text="@string/livraisons"
        android:onClick="toDelivery"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:id="@+id/admin_buttonClient"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/client"
        android:onClick="toClient"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_buttonDriver"
        android:text="@string/chauffeur"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/admin_buttonClient"
        android:onClick="toDriver"/>
</RelativeLayout>
