<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.marc.truckdelivery.LoginPage"
    android:weightSum="1">


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Log_on"
        android:layout_weight="0.04"
        android:layout_marginLeft="20dp"
        tools:ignore="LabelFor,RtlHardcoded"
        android:hint="@string/enter_your_username" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Log_pass"
        android:layout_weight="0.04"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        tools:ignore="LabelFor,RtlHardcoded" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16" />

    <Button
        android:text="@string/login"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:id="@+id/log_button"
        android:onClick="login"
        tools:ignore="RtlHardcoded" />
</LinearLayout>
